# cartelm

./: .gitignore  Makefile  README.md
cartapp/public/: manifest.json
cartapp/src/: Main.elm
rust/: Cargo.toml
rust/create/: Cargo.toml
rust/create/src/: main.rs
rust/delete/: Cargo.toml
rust/delete/src/: main.rs
rust/get/: Cargo.toml
rust/get/src/: main.rs
rust/list_all/: Cargo.toml
rust/list_all/src/: main.rs
rust/scrape_dilbert/: Cargo.toml
rust/scrape_dilbert/src/: main.rs
rust/update/: Cargo.toml
rust/update/src/: main.rs
terraform/: main.tf
