[package]
name = "scrape_dilbert"
version = "0.1.0"
authors = ["Vit Spinka <spinka@pythian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = ["blocking"]}
select = "^0.5"
scraper = "^0.12"
rusoto_core = {version = "^0.42", default_features = false, features=["rustls"]}
rusoto_ses = {version = "^0.42", default_features = false, features=["rustls"]}
rusoto_dynamodb = {version = "^0.42", default_features = false, features=["rustls"]}
lettre = "^0.9"
lettre_email = "^0.9"
mime = "^0.3"
bytes = "^0.4"
base64 = "^0.13"