[package]
name = "scrape_dilbert"
version = "0.1.0"
authors = ["Vit Spinka <spinka@pythian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "^0.2"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
log = "^0.4"
simple_logger = "^1"
simple-error = "^0.2"
reqwest = { version = "^0.11", default-features = false,  features = ["blocking", "rustls-tls"]}
select = "^0.5"
scraper = "^0.12"
rusoto_core = {version = "^0.42", default_features = false, features=["rustls"]}
rusoto_ses = {version = "^0.42", default_features = false, features=["rustls"]}
rusoto_dynamodb = {version = "^0.42", default_features = false, features=["rustls"]}
lettre = { version = "0.10.0-alpha.4", default-features = false,  features = ["rustls-tls", "builder"]}
mime = "^0.3"
bytes = "^0.4"
base64 = "^0.13"